www/assets/css/main.css
/* ... */
.back-to-top {
  display: none;
  position: fixed;
  right: 10px;
  bottom: 10px;
  z-index: 9999;
}
@media screen and (max-width: 992px) {
  .back-to-top {
    display: none !important;
  }
}
.back-to-top a {
  -webkit-border-radius: 2px;
  -moz-border-radius: 2px;
  -ms-border-radius: 2px;
  -o-border-radius: 2px;
  border-radius: 2px;
  -webkit-transition-property: background-color;
  -moz-transition-property: background-color;
  -o-transition-property: background-color;
  transition-property: background-color;
  -webkit-transition-duration: 0.2s;
  -moz-transition-duration: 0.2s;
  -o-transition-duration: 0.2s;
  transition-duration: 0.2s;
  -webkit-transition-timing-function: linear;
  -moz-transition-timing-function: linear;
  -o-transition-timing-function: linear;
  transition-timing-function: linear;
  display: block;
  width: 25px;
  height: 25px;
  color: #fff;
  text-align: center;
  background-color: rgba(0, 0, 0, 0.3);
}
.back-to-top a:hover {
  background-color: rgba(0, 0, 0, 0.5);
}

.copyright {
  font-size: 0.8em;
  line-height: 36px;
}
@media screen and (max-width: 480px) {
  .copyright {
    width: 100%;
    text-align: center;
  }
}

@media screen and (max-width: 480px) {
  .social-icon {
    width: 100%;
    text-align: center;
  }
}
.social-icon li {
  margin: 0 5px;
}
.social-icon li a {
  -webkit-border-radius: 50%;
  -moz-border-radius: 50%;
  -ms-border-radius: 50%;
  -o-border-radius: 50%;
  border-radius: 50%;
  -webkit-transition-property: background-color;
  -moz-transition-property: background-color;
  -o-transition-property: background-color;
  transition-property: background-color;
  -webkit-transition-duration: 0.2s;
  -moz-transition-duration: 0.2s;
  -o-transition-duration: 0.2s;
  transition-duration: 0.2s;
  -webkit-transition-timing-function: linear;
  -moz-transition-timing-function: linear;
  -o-transition-timing-function: linear;
  transition-timing-function: linear;
  display: block;
  width: 36px;
  height: 36px;
  font-size: 14px;
  line-height: 33px;
  text-align: center;
  color: #8a8a8a;
  border: 2px solid #8a8a8a;
}
.social-icon li a:hover {
  background-color: #8a8a8a;
  color: #fafafa;
}

#conduct ul, #about ul{
    list-style-type: square;
    margin-left: 20px;
}

#sponsoring div.sponsor {
    padding-top: 50px;
}
#sponsoring .sponsor img{
    width: 100%;
    max-height: 150px;
}

#sponsoring div.row h3 {
    text-align: center;
}
#team .profile{
    text-align: center
}

